# apimatic-python-sdk

./: README.md  pyproject.toml  requirements.txt
apimaticapi/: __init__.py  api_helper.py  apimaticapi_client.py  configuration.py
apimaticapi/controllers/: __init__.py  api_validation_external_apis_controller.py  api_validation_imported_apis_controller.py  apis_management_controller.py  base_controller.py  code_generation_external_apis_controller.py  code_generation_imported_apis_controller.py  docs_portal_management_controller.py  transformation_controller.py
apimaticapi/exceptions/: api_exception.py
apimaticapi/http/: http_call_back.py  http_method_enum.py  http_request.py  http_response.py
apimaticapi/models/: __init__.py  api_entity.py  api_entity_code_generation.py  api_entity_identifier.py  api_validation_summary.py  attributes.py  auth_scope.py  authentication.py  code_gen_settings.py  code_generation.py  docs_validation_summary.py  endpoints_group.py  environment.py  export_formats.py  field.py  generate_on_prem_portal_via_build_input_request_body.py  generate_sdk_via_file_request_body.py  generate_sdk_via_url_request.py  import_api_version_via_url_request.py  import_api_via_file_request_body.py  import_api_via_url_request.py  import_new_api_version_via_file_request_body.py  import_validation_summary.py  inplace_api_import_binary_file.py  inplace_import_api_via_url_request.py  meta_data.py  parameter.py  paramter_format_details.py  platforms.py  platforms_template.py  server.py  server_configuration.py  (+7 more)
doc/: client.md
tests/: http_response_catcher.py
(+51 files in other folders)
