[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "sdksio-apimatic-sdk"
description = "Use APIMatic API to generate SDKs in Python, Typescript, PHP, Ruby, and GO. You can generate On-Prem portal and many more."
version = "3.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["APIMatic", "SDK", "API"]
authors = []
urls = {}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0", "enum34~=1.1, >=1.1.10"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
